Changelog
=========

0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2013-07-25)
----------------

- Add little security with token and registry.
  [bsuttor]


0.1 (2013-07-17)
----------------

- Package created using templer
  [bsuttor]